# T-skRAZRAB0T

./: .env  handle_test.py  main.py  products.json  pyproject.toml  test.py
api/: client.py  wb_client.py
automators/: wb.py
automators/controllers/: DolphinController.py  NSTController.py
automators/models/: browser.py
bot/handlers/: product.py
bot/middlewares/: wb_clients_mid.py
schemas/: account.py
settings/: config.py  loggers.py
tests/: handle_test.py
tools/: keywords_extraction.py
