[project]
name = "taskrazrabot"
version = "0.1.0"
description = ""
authors = [
    {name = "Until",email = "kostyuchenko.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
